--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.0.0-rc.6",
+    "aws-sdk": "^2.157.0",
     "body-parser": "^1.15.0",
     "cli": "^1.0.0",
+    "console-stamp": "^0.2.7",
     "download": "^6.1.0",
     "express": "^4.13.4",
     "fs-extra": "^0.30.0",
@@ -33,8 +35,7 @@
     "morgan": "^1.6.1",
     "node-dir": "^0.1.11",
     "request": "^2.69.0",
-    "shortid": "^2.2.4",
-    "aws-sdk": "^2.157.0"
+    "shortid": "^2.2.4"
   },
   "devDependencies": {
     "chai": "^3.5.0",
