--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.15.0",
     "cli": "^1.0.0",
     "console-stamp": "^0.2.7",
+    "dotenv": "^6.2.0",
     "download": "^6.1.0",
     "express": "^4.13.4",
     "fs-extra": "^0.30.0",
@@ -46,7 +47,7 @@
     "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
     "istanbul": "^0.4.2",
-    "jshint": "^2.9.1",
+    "jshint": "^2.9.7",
     "mocha": "^2.4.5",
     "rewire": "^2.5.1"
   }
